objects/Kiosk__c.object
<CustomObject>
    <description>Location ID, formerly &quot;The kiosks associated with a specific location&quot; however we are now splitting the apart. What was the KIN is now the LIN, which represents the location of the charging station.</description>
    <fields>
        <fullName>ADA_Type__c</fullName>
        <description>ADA Exclusive (Volta Kiosk in ADA only stall)
ADA Compliant (Volta Kiosk that is &quot;Open&quot; but meets ADA requirements)
ADA Pedestal (Non revenue generating Pedestal in ADA only stall)</description>
        <inlineHelpText>ADA Exclusive (Volta Kiosk in ADA only stall)
ADA Compliant (Volta Kiosk that is &quot;Open&quot; but meets ADA requirements)
ADA Pedestal (Non revenue generating Pedestal in ADA only stall)</inlineHelpText>
        <label>ADA Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ADA__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ADA Exclusive</fullName>
                </value>
                <value>
                    <fullName>ADA Compliant</fullName>
                </value>
                <value>
                    <fullName>ADA Pedestal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this stations service only an ADA parking spot?</description>
        <inlineHelpText>Does this stations service only an ADA parking spot?</inlineHelpText>
        <label>ADA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AHJ_Approval__c</fullName>
        <description>Has this specific Location been approved by the AHJ? This is does NOT represent the AHJ approval of the Construction Project.</description>
        <inlineHelpText>Has this specific Location been approved by the AHJ? This is does NOT represent the AHJ approval of the Construction Project.</inlineHelpText>
        <label>AHJ Approval</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AT_T_Signal_Strength__c</fullName>
        <description>In -db</description>
        <inlineHelpText>In -db</inlineHelpText>
        <label>AT&amp;T Signal Strength</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <description>Concur Field</description>
        <inlineHelpText>Concur Field</inlineHelpText>
        <label>Accrued UnApproved Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_Copy_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Copy Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Antenna_Kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this station have a cellular antenna booster kit installed?</description>
        <inlineHelpText>Does this station have a cellular antenna booster kit installed?</inlineHelpText>
        <label>Antenna Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Azimuth__c</fullName>
        <description>Direction on a compass that the front (small face) of the station faces</description>
        <inlineHelpText>Direction on a compass that the front (small face) of the station faces</inlineHelpText>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breaker_Amperage__c</fullName>
        <description>Nominal rating of max amperage at the panel that&apos;s feeding the circuit on that make ready (ex: 40A label on the breaker)</description>
        <inlineHelpText>Nominal rating of max amperage at the panel that&apos;s feeding the circuit on that make ready (ex: 40A label on the breaker)</inlineHelpText>
        <label>Breaker Amperage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Standard_Amperage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP_City__c</fullName>
        <formula>Construction_Project__r.Opp_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Completion_Date__c</fullName>
        <formula>Construction_Project__r.Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected CP Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CP_Stage__c</fullName>
        <formula>TEXT(Construction_Project__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_State__c</fullName>
        <formula>Construction_Project__r.Opp_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Street_Address__c</fullName>
        <formula>Construction_Project__r.Opp_Site_A__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Zip__c</fullName>
        <formula>Construction_Project__r.Opp_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_OoS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PUBLIC FACING - Charger Out of Service. If this field is checked, the app will show this LIN as OoS.</description>
        <inlineHelpText>PUBLIC FACING - Charger Out of Service. If this field is checked, the app will show this LIN as OoS.</inlineHelpText>
        <label>Charger OoS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charging_Data_Total_Charge_Events__c</fullName>
        <label>Charging Data Total Charge Events</label>
        <summarizedField>Charging_Data__c.Charge_Events__c</summarizedField>
        <summaryForeignKey>Charging_Data__c.Location_LIN__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charging_Data_Total_kwh__c</fullName>
        <label>Charging Data Total kwh</label>
        <summarizedField>Charging_Data__c.Monthly_kwhs__c</summarizedField>
        <summaryForeignKey>Charging_Data__c.Location_LIN__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charging_Engineered_for__c</fullName>
        <description>This tracks the charing level the site was engineered for. The amperage made available to the Location (LIN) via the make-ready. Should be tested to always be a lower value than the output of the line loss equation.</description>
        <inlineHelpText>This tracks the charing level the site was engineered for. The amperage made available to the Location (LIN) via the make-ready. Should be tested to always be a lower value than the output of the line loss equation.</inlineHelpText>
        <label>Charging Engineered for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Standard_Amperage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Code__c</fullName>
        <description>LIN Client Code Autonumber Generated on the related Construction Project</description>
        <formula>Construction_Project__r.Client_No_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LIN Client Code Autonumber Generated on the related Construction Project</inlineHelpText>
        <label>Client Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_No__c</fullName>
        <label>Client Code No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conduit_Size__c</fullName>
        <description>Tubing is measured by the OUTSIDE DIAMETER (O.D.), specified in inches (e.g., 1.250) or fraction of an inch (eg. 1-1/4″). Pipe is usually measured by NOMINAL PIPE SIZE (NPS). ... The table below cross-references the nominal dimension of a PIPE with its actual outside diameter.</description>
        <inlineHelpText>Measured by the OUTSIDE DIAMETER (O.D.), specified in inches (e.g., 1.250) or fraction of an inch (eg. 1-1/4″). Pipe is usually measured by NOMINAL PIPE SIZE (NPS). ... The table below cross-references the nominal dimension of a PIPE with its actual OD.</inlineHelpText>
        <label>Conduit Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Conduit_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Project</label>
        <referenceTo>Construction_Project__c</referenceTo>
        <relationshipName>Kiosks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cost_to_Access__c</fullName>
        <description>If you need to pay an access fee to access the parking area, please enter the cost here.</description>
        <inlineHelpText>If you need to pay an access fee to access the parking area, please enter the cost here.</inlineHelpText>
        <label>Cost to Access</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_Azimuth__c</fullName>
        <description>Azimuth (direction of a compass bearing) The flat plane of the smaller smaller side of the station should be facing (perpendicular to) this direction. Ex: If the small side of the station is to be placed facing due east, the Desired Azimuth is 90.</description>
        <inlineHelpText>Azimuth (direction of a compass bearing) The flat plane of the smaller smaller side of the station should be facing (perpendicular to) this direction. Ex: If the small side of the station is to be placed facing due east, the Desired Azimuth is 90.</inlineHelpText>
        <label>Desired Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EKM_Meter_B__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this station has two charging ports, this is where the second or &quot;B&quot; meter # is saved.</description>
        <inlineHelpText>If this station has two charging ports, this is where the second or &quot;B&quot; meter # is saved.</inlineHelpText>
        <label>EKM Meter B</label>
        <referenceTo>EKM_Meter__c</referenceTo>
        <relationshipName>Kiosks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EKM_Meter_Left_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EKM Meter Left Test</label>
        <referenceTo>EKM_Meter__c</referenceTo>
        <relationshipLabel>Locations (EKM Meter Left Test)</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EKM_Meter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EKM Meter</label>
        <referenceTo>EKM_Meter__c</referenceTo>
        <relationshipName>Kiosks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EKM_Push__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EKM Push</label>
        <referenceTo>EKM_Push__c</referenceTo>
        <relationshipName>Kiosks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Reimbursement_Amount__c</fullName>
        <label>Electrical Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electrical_Reimbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Reimbursement</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>KiosksElec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Est_Monthly_Impressions_Per_Station__c</fullName>
        <description>EST MONTHLY IMPRESSIONS PER STATION</description>
        <inlineHelpText>EST MONTHLY IMPRESSIONS PER STATION</inlineHelpText>
        <label>Est Monthly Impressions Per Station</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinalExpenseTotal__c</fullName>
        <description>Concur Field</description>
        <inlineHelpText>Concur Field</inlineHelpText>
        <label>Final Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Kiosk_Tracking_ID_No__c</fullName>
        <formula>Network_No__c &amp;&quot;-&quot;&amp; Property_No__c &amp;&quot;-&quot;&amp; Client_No__c &amp;&quot;-&quot;&amp; Station_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIN_Record_ID__c</fullName>
        <formula>(Id)</formula>
        <label>LIN Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIN_Text__c</fullName>
        <description>LIN in text format</description>
        <externalId>true</externalId>
        <inlineHelpText>LIN in text format</inlineHelpText>
        <label>LIN Text</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LIN__c</fullName>
        <formula>Construction_Project__r.Opp_Network_Region_No__c &amp;&quot;-&quot;&amp; Property_Code__c &amp;&quot;-&quot;&amp; Client_Code__c &amp;&quot;-&quot;&amp; Station_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatLong__c</fullName>
        <formula>TEXT(Latitude__c)  &amp; &quot;,&quot; &amp; &quot; &quot; &amp; TEXT(Longitude__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LatLong</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lat_Lon_Looked_Up_At__c</fullName>
        <description>This field is only used by the trigger.</description>
        <inlineHelpText>This field is only used by the trigger.</inlineHelpText>
        <label>Lat Lon Looked Up At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launch_Checklist_Completion_Date__c</fullName>
        <label>Launch Checklist Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Notes__c</fullName>
        <description>INTERNAL ONLY</description>
        <inlineHelpText>INTERNAL ONLY</inlineHelpText>
        <label>Location Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Networks__c</fullName>
        <label>Media Sales Networks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Cinema/Entertainment</fullName>
                </value>
                <value>
                    <fullName>Personal Care</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Fashion/Luxury</fullName>
                </value>
                <value>
                    <fullName>High HHI</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Pet Network</fullName>
                </value>
                <value>
                    <fullName>Male Network</fullName>
                </value>
                <value>
                    <fullName>Fitness</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
                <value>
                    <fullName>Organic food consumers</fullName>
                </value>
                <value>
                    <fullName>RX Network</fullName>
                </value>
                <value>
                    <fullName>CPG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_No__c</fullName>
        <label>Network No</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Region__c</fullName>
        <label>Network Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA - Northern</fullName>
                </value>
                <value>
                    <fullName>CA - Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>CA - Los Angeles</fullName>
                </value>
                <value>
                    <fullName>CA - Orange County</fullName>
                </value>
                <value>
                    <fullName>CA - San Diego</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>Oregon</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <description>From CP</description>
        <formula>TEXT(Construction_Project__r.Network_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From CP</inlineHelpText>
        <label>Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Faces__c</fullName>
        <label># of Faces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OP_EX__c</fullName>
        <label>Other Opex</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Rent To:</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Kiosks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_to_Park__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if a charging customer is required to pay for access our location. (Example: Location is in a parking garage that requires validation or payment)</description>
        <inlineHelpText>Check this field if a charging customer is required to pay for access our location. (Example: Location is in a parking garage that requires validation or payment)</inlineHelpText>
        <label>Pay to Park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PlugShare_Link__c</fullName>
        <description>A link to the specific site on plugshare.</description>
        <inlineHelpText>A link to the specific site on plugshare.</inlineHelpText>
        <label>PlugShare Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <description>LIN Property Code Autonumber Generated on the related Construction Project﻿</description>
        <formula>Construction_Project__r.Property_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>LIN Property Code Autonumber Generated on the related Construction Project﻿</inlineHelpText>
        <label>Property Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_No__c</fullName>
        <label>Property No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Frequency__c</fullName>
        <label>Rent Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly - Pre</fullName>
                </value>
                <value>
                    <fullName>Quarterly - Post</fullName>
                </value>
                <value>
                    <fullName>Monthly - Pre</fullName>
                </value>
                <value>
                    <fullName>Monthly - Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Payee__c</fullName>
        <label>Rent Payee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <label>Rent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rev_Share_Percent__c</fullName>
        <label>Rev Share Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rev_Share__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rev Share</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>KiosksRevShare</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Generating__c</fullName>
        <description>Does this Kiosk have as ad faces that can be sold to generate revenue? Example of Non-Revenue Generating would be Crissy Field, where we can&apos;t actually sell the ad space, even though there are two physical faces on the the station. The site agreement contract stipulates whether we can generate revenue from a specific kiosk.</description>
        <inlineHelpText>Does this Kiosk have as ad faces that can be sold to generate revenue? Example of Non-Revenue Generating would be Crissy Field, where we can&apos;t actually sell the ad space, even though there are two physical faces on the the station. The site agreement cont</inlineHelpText>
        <label>Revenue Generating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media Revenue Generating</fullName>
                </value>
                <value>
                    <fullName>Non-Revenue Generating</fullName>
                </value>
                <value>
                    <fullName>Volta Services Revenue Generating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIN_Access_Key__c</fullName>
        <formula>TEXT(Station_SIN__r.Access_Key__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIN Access Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percent__c</fullName>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_on_App__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show on App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signal_Environment__c</fullName>
        <label>Signal Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Air</fullName>
                </value>
                <value>
                    <fullName>Garage Above Grade</fullName>
                </value>
                <value>
                    <fullName>Garage Ground Level</fullName>
                </value>
                <value>
                    <fullName>Garage Below Grade</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Account_Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account Cluster</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (LIN) (Site Account Cluster)</relationshipLabel>
        <relationshipName>Locations_LIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Account_Shipping_Address__c</fullName>
        <formula>Site_Account__r.ShippingStreet &amp; BR() 
&amp; Site_Account__r.ShippingCity &amp; &quot;, &quot; &amp; Site_Account__r.ShippingState &amp; &quot; &quot; &amp; Site_Account__r.ShippingPostalCode &amp;BR() 
&amp; Site_Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Account_Zip__c</fullName>
        <formula>HYPERLINK(&quot;https://na52.salesforce.com/&quot;&amp;Site_Account__r.Zip__c , Site_Account__r.Zip__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Account Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations (LIN) (Account)</relationshipLabel>
        <relationshipName>Kiosks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Opportunity__c</fullName>
        <formula>HYPERLINK(&quot;https://na52.salesforce.com/&quot;&amp; Construction_Project__r.Biz_Dev_Opportunity__c, Construction_Project__r.Biz_Dev_Opportunity__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Partner_Approval__c</fullName>
        <description>Site partner&apos;s approval status of this specific Location. NOT indicative of the entire Construction Project.</description>
        <inlineHelpText>Site partner&apos;s approval status of this specific Location. NOT indicative of the entire Construction Project.</inlineHelpText>
        <label>Site Partner Approval</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Vet_Approval__c</fullName>
        <description>Status of our internal Site Vetting Committee approval of the specific Location.</description>
        <inlineHelpText>Status of our internal Site Vetting Committee approval of the specific Location.</inlineHelpText>
        <label>Site Vet Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Chassis__c</fullName>
        <formula>TEXT (Station_SIN__r.Station_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Chassis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_EKM_Meter_Left__c</fullName>
        <description>Metering equipment is associated with the Station, not the Location. This field auto-populates with the meter from the associated station. You can go to the station object to edit this field.</description>
        <formula>HYPERLINK(&quot;https://na14.salesforce.com/&quot;&amp;Station_SIN__r.EKM_Meter_Left__c, Station_SIN__r.EKM_Meter_Left__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Metering equipment is associated with the Station, not the Location. This field auto-populates with the meter from the associated station. You can go to the station object to edit this field.</inlineHelpText>
        <label>Station EKM Meter Left</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_EKM_Meter_Right__c</fullName>
        <description>Metering equipment is associated with the Station, not the Location. This field auto-populates with the meter from the associated station. You can go to the station object to edit this field.</description>
        <formula>HYPERLINK(&quot;https://na14.salesforce.com/&quot;&amp;Station_SIN__r.EKM_Meter_Right__c, Station_SIN__r.EKM_Meter_Right__r.Name )</formula>
        <inlineHelpText>Metering equipment is associated with the Station, not the Location. This field auto-populates with the meter from the associated station. You can go to the station object to edit this field.</inlineHelpText>
        <label>Station EKM Meter Right</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Face_Back_Text__c</fullName>
        <formula>Station_SIN__r.Face_Specification_Back__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station Face Back Text</label>
        <type>Text</type>
    </fields>
</CustomObject>